--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>CommonJS React Skeleton</title>
   </head>
   <body>
-    <div id="ingredients"></div>
+    <div id="testItems"></div>
     <script src="js/main.js"></script>
   </body>
 </html>
